examples/smlfmt-1.2.0/test/fail/bad-where-type-1.sml
signature X =
  Y where 'a Foo.t = 'a list
